logs/dag_id=hook/run_id=manual__2024-02-23T14:06:11.467876+00:00/task_id=insert_data/attempt=1.log
[2024-02-23T14:06:13.302+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: hook.insert_data manual__2024-02-23T14:06:11.467876+00:00 [queued]>
[2024-02-23T14:06:13.311+0000] {taskinstance.py:1083} INFO - Dependencies all met for <TaskInstance: hook.insert_data manual__2024-02-23T14:06:11.467876+00:00 [queued]>
[2024-02-23T14:06:13.311+0000] {taskinstance.py:1279} INFO - 
--------------------------------------------------------------------------------
[2024-02-23T14:06:13.311+0000] {taskinstance.py:1280} INFO - Starting attempt 1 of 1
[2024-02-23T14:06:13.312+0000] {taskinstance.py:1281} INFO - 
--------------------------------------------------------------------------------
[2024-02-23T14:06:13.324+0000] {taskinstance.py:1300} INFO - Executing <Task(PythonOperator): insert_data> on 2024-02-23 14:06:11.467876+00:00
[2024-02-23T14:06:13.328+0000] {standard_task_runner.py:55} INFO - Started process 300 to run task
[2024-02-23T14:06:13.330+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'hook', 'insert_data', 'manual__2024-02-23T14:06:11.467876+00:00', '--job-id', '81', '--raw', '--subdir', 'DAGS_FOLDER/hooks.py', '--cfg-path', '/tmp/tmpyfy3gxxe']
[2024-02-23T14:06:13.330+0000] {standard_task_runner.py:83} INFO - Job 81: Subtask insert_data
[2024-02-23T14:06:13.380+0000] {task_command.py:388} INFO - Running <TaskInstance: hook.insert_data manual__2024-02-23T14:06:11.467876+00:00 [running]> on host cdeaeee87fd3
[2024-02-23T14:06:13.432+0000] {taskinstance.py:1509} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=hook
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-02-23T14:06:11.467876+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-02-23T14:06:11.467876+00:00
[2024-02-23T14:06:13.438+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2024-02-23T14:06:13.441+0000] {sql.py:375} INFO - Running statement: inert into teste2 values(1);, parameters: None
[2024-02-23T14:06:13.442+0000] {taskinstance.py:1768} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/hooks.py", line 20, in insert_data
    pg_hook.run("inert into teste2 values(1);", autocommit=True)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "inert"
LINE 1: inert into teste2 values(1);
        ^

[2024-02-23T14:06:13.448+0000] {taskinstance.py:1323} INFO - Marking task as FAILED. dag_id=hook, task_id=insert_data, execution_date=20240223T140611, start_date=20240223T140613, end_date=20240223T140613
[2024-02-23T14:06:13.458+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 81 for task insert_data (syntax error at or near "inert"
LINE 1: inert into teste2 values(1);
        ^
; 300)
[2024-02-23T14:06:13.502+0000] {local_task_job.py:208} INFO - Task exited with return code 1
[2024-02-23T14:06:13.522+0000] {taskinstance.py:2578} INFO - 0 downstream tasks scheduled from follow-on schedule check
